# LLM2Seq

./: .gitignore  Gemini_Research.md  LLM2Seq_Implementation_Plan.md  Makefile  README.md  RESEARCH.md  pyproject.toml  requirements.txt  run.sh  run_all.sh  run_all_experiments.sh
.github/workflows/: ci.yml
App/backend/: README.md  config.yaml  main.py  requirements.txt
App/frontend/: README.md  UI_THEME_SPEC.md  index.html
Report/: README.md  VDT_LLM2Seq.aux  VDT_LLM2Seq.bbl  VDT_LLM2Seq.blg  VDT_LLM2Seq.out  VDT_LLM2Seq.tex  acl_latex.aux  acl_latex.bbl  acl_latex.fdb_latexmk  acl_latex.out  acl_latex.tex  acl_lualatex.tex  anthology.bib.txt  custom.bib
Slide/: VDT_LLM2Seq_Slides.tex
T5Gemma/: README.md  env.example.txt  install_deps.sh  requirements.txt  smoke_check.sh
T5Gemma/configs/: lora_l40_3072.yaml  vlsp_lora.yaml  wikilingua_lora_3072.yaml
T5Gemma/results/: eval_run_info.json  metrics.json
T5Gemma/scripts/: evaluate.sh  load_env.sh  prepare_vlsp_json.py  push_to_hf.py  train_lora.py
configs/: smoke_test.yaml  vietnews_qwen.yaml
deploy/: README.md
deploy/docker/: .dockerignore  backend.Dockerfile  backend.Dockerfile.dockerignore  docker-compose.yml  frontend.Dockerfile  nginx.conf
deploy/k8s/: 00-namespace.yaml  backend.yaml  frontend.yaml  ingress.yaml
llm2seq/: README.md  env.example.txt  install_deps.sh  kaggle_colab_training.ipynb  kaggle_training.ipynb  requirements.txt  run_phase3_standalone.sh  smoke_check.sh
llm2seq/configs/: baseline.yaml  kd_mtp_full.yaml  kd_only.yaml  mtp_only.yaml  vlsp_llama_phase1.yaml  vlsp_llama_phase2.yaml  vlsp_llama_phase3.yaml  vlsp_phase1.yaml  vlsp_phase2.yaml  vlsp_phase3.yaml  vlsp_qwen_phase1.yaml  vlsp_qwen_phase2.yaml  wikilingua_phase1.yaml  wikilingua_phase2.yaml  wikilingua_phase3.yaml  wikilingua_qwen_phase1.yaml  wikilingua_qwen_phase2.yaml  wikilingua_qwen_phase3.yaml
llm2seq/scripts/: eval_all.sh  evaluate_full_test.py  evaluate_phase.sh  hf_checkpoint.py  load_env.sh  prepare_vlsp_json.py  push_to_hf.py  recover_metrics.py  train_all.sh  train_baseline.sh  train_full.sh  train_kd.sh  train_mtp.sh  train_phase3.sh
llm2seq_final/: README.md  env.example.txt  install_deps.sh  run_phase3_standalone.sh  run_pipeline.sh  smoke_check.sh
scripts/: build_adapted_model.py  eval_summarization.py  train_summarization.py
src/: __init__.py  adaptation.py  data_utils.py  objectives.py  warmup.py
src/T5Gemma/: README.md  (+3 more)
v1_encdec_adaptation/: README.md  generate_notebook.py  kaggle_training.ipynb
(+146 files in other folders)
